updated v3.0.5: 1. 图书详情界面增加豆瓣、当当友链跳转； 2. 课表订阅消息订阅前提醒仅一次有效； 3. 个人课表单节课程最多兼容由4节增加到5节; 4. 扫码查书功能回归; 5. 校园班车增加发车时刻表；

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -11,14 +11,7 @@
       "list": []
     },
     "miniprogram": {
-      "list": [
-        {
-          "name": "pages/books/detail",
-          "pathName": "pages/books/detail",
-          "query": "code=6f6f62567a58674a37632b59576a6d735476686c6e413d3d",
-          "scene": null
-        }
-      ]
+      "list": []
     }
   }
 }
