--- a/project.private.config.json
+++ b/project.private.config.json
@@ -11,7 +11,14 @@
       "list": []
     },
     "miniprogram": {
-      "list": []
+      "list": [
+        {
+          "name": "pages/index/index",
+          "pathName": "pages/index/index",
+          "query": "",
+          "scene": 1047
+        }
+      ]
     }
   }
 }
