1. 新增热门图书&图书超期欠费查询功能； 2. 图书借阅opac系统登录错误提示优化; 3. 图书详情页面代码优化解决ISBN扫码图书馆无馆藏错误； 4. 部分请求添加请求超时时间限制; 4. 校园站点新增补充党课学习和计费认证链接；

--- a/app.json
+++ b/app.json
@@ -7,6 +7,9 @@
     "pages/books/detail",
     "pages/books/shelf",
     "pages/books/bind",
+    "pages/books/hot/index",
+    "pages/books/overdue/index",
+    "pages/books/recommend/index",
     "pages/books/my",
     "pages/course/my",
     "pages/course/search",
