updated v3.0.9: 1. 新增专门的图书检索界面，并提供了热门检索词和分类目检索书架; 2. 封装tips为组件; 3. 接入图书类目公共书架并兼容之展示分享; 4. 其他的样式优化&震动反馈. 5. 简略的3.0版本文档;

--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "pages/index/index",
     "pages/index/login",
     "pages/index/feature",
+    "pages/books/search",
     "pages/books/index",
     "pages/books/detail",
     "pages/books/shelf",
