updated v3.1.1: 1. 网费查询功能回归，且支持明细查询; 2. 出入校功能优化

--- a/app.json
+++ b/app.json
@@ -17,6 +17,9 @@
     "pages/course/content",
     "pages/course/stulist/index",
     "pages/course/stulist/content",
+    "pages/netsys/bind",
+    "pages/netsys/index",
+    "pages/netsys/list",
     "pages/traffic/navi",
     "pages/traffic/bus",
     "pages/score/score",
