--- a/project.private.config.json
+++ b/project.private.config.json
@@ -13,8 +13,8 @@
     "miniprogram": {
       "list": [
         {
-          "name": "pages/school/todayschool",
-          "pathName": "pages/school/todayschool",
+          "name": "pages/netsys/bind",
+          "pathName": "pages/netsys/bind",
           "query": "",
           "scene": 1047
         }
