update v3.1.2： 1. 电费查询; 2. 电费查询&网费查询首页列表卡片； 3. 网费查询选择器年份-10问题修复； 4. 其他若干问题修复&代码优化.

--- a/app.json
+++ b/app.json
@@ -17,6 +17,8 @@
     "pages/course/content",
     "pages/course/stulist/index",
     "pages/course/stulist/content",
+    "pages/elesys/bind",
+    "pages/elesys/index",
     "pages/netsys/bind",
     "pages/netsys/index",
     "pages/netsys/list",
