--- a/project.private.config.json
+++ b/project.private.config.json
@@ -13,10 +13,10 @@
     "miniprogram": {
       "list": [
         {
-          "name": "pages/netsys/bind",
-          "pathName": "pages/netsys/bind",
-          "query": "",
-          "scene": 1047
+          "name": "elesys",
+          "pathName": "pages/elesys/index",
+          "query": "building==22&zhai=303",
+          "scene": 1007
         }
       ]
     }
