updated V3.1.6 权益投诉功能

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -13,9 +13,9 @@
     "miniprogram": {
       "list": [
         {
-          "name": "elesys",
-          "pathName": "pages/elesys/index",
-          "query": "building==22&zhai=303",
+          "name": "reply-board",
+          "pathName": "pages/school/board/index",
+          "query": "",
           "scene": 1007
         }
       ]
