--- a/app.json
+++ b/app.json
@@ -31,7 +31,10 @@
     "pages/school/web",
     "pages/school/aboutus",
     "pages/school/todayschool",
-    "pages/school/xiaoai"
+    "pages/school/xiaoai",
+    "pages/school/board/index",
+    "pages/school/board/edit",
+    "pages/school/board/detail"
   ],
   "window": {
     "backgroundTextStyle": "light",
