--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
     "pages/books/overdue/index",
     "pages/books/recommend/index",
     "pages/books/my",
+    "pages/books/portrait",
     "pages/course/my",
     "pages/course/search",
     "pages/course/content",
