update 3.1.11&3.1.12: 1. 再次优化完善出入校功能; 2. 寝室电费功能回归; 3. 毕业生画像功能下线; 4. 权益留言板页码修复&头像大小调整; 5. 成绩查询评教优化

--- a/app.json
+++ b/app.json
@@ -32,6 +32,7 @@
     "pages/school/web",
     "pages/school/aboutus",
     "pages/school/todayschool",
+    "pages/school/fakeschool",
     "pages/school/xiaoai",
     "pages/school/board/index",
     "pages/school/board/edit",
