权益投诉优化&针对审核隐藏失物招领
1. 投诉人必填联系方式;
2. 投诉被回复微信订阅消息通知;
3. 增加投诉是否回复的状态;
4. 展示投诉用户微信昵称统一展示指定头像
5. 针对审核隐藏失物招领;

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -11,7 +11,14 @@
       "list": []
     },
     "miniprogram": {
-      "list": []
+      "list": [
+        {
+          "name": "pages/school/board/index",
+          "pathName": "pages/school/board/index",
+          "query": "",
+          "scene": null
+        }
+      ]
     }
   }
 }
