--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
         UPLOAD_PRIVATE_KEY: ${{ secrets.UPLOAD_PRIVATE_KEY }}
     # 上传代码
     - name: Upload to WeChat
-      run: npx mp-ci upload ./ --pkp=./private.key --no-test
+      run: npx mp-ci upload ./ --pkp=./private.key
