新增运动排行榜&用户态相关代码优化

--- a/app.json
+++ b/app.json
@@ -39,7 +39,8 @@
     "pages/school/board/detail",
     "pages/school/lost/edit",
     "pages/school/lost/index",
-    "pages/school/lost/detail"
+    "pages/school/lost/detail",
+    "pages/school/run/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
