更新对应v3.2.3新版本文档

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.2.1",
-    "description": "mp-ci测试",
+    "version": "3.2.3",
+    "description": "mp-ci发布",
     "author": "Airmole"
   }
