UGC相关内容全部隐藏

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -11,14 +11,7 @@
       "list": []
     },
     "miniprogram": {
-      "list": [
-        {
-          "name": "pages/school/run/index",
-          "pathName": "pages/school/run/index",
-          "query": "",
-          "scene": null
-        }
-      ]
+      "list": []
     }
   }
 }
