基本完成缴费记录页面

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -11,7 +11,20 @@
       "list": []
     },
     "miniprogram": {
-      "list": []
+      "list": [
+        {
+          "name": "缴费绑定",
+          "pathName": "pages/school/finance/bind",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/school/finance/index",
+          "pathName": "pages/school/finance/index",
+          "query": "",
+          "scene": null
+        }
+      ]
     }
   }
 }
