--- a/app.json
+++ b/app.json
@@ -40,7 +40,9 @@
     "pages/school/lost/edit",
     "pages/school/lost/index",
     "pages/school/lost/detail",
-    "pages/school/run/index"
+    "pages/school/run/index",
+    "pages/school/finance/bind",
+    "pages/school/finance/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
