--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.2.4",
-    "description": "小爱课表新增演示视频跳转&cookie静默更新负载均衡",
+    "version": "3.2.5",
+    "description": "新增学费缴费查询功能&更新增加39~42斋地点地图",
     "author": "Airmole"
   }
