--- a/project.private.config.json
+++ b/project.private.config.json
@@ -11,7 +11,14 @@
       "list": []
     },
     "miniprogram": {
-      "list": []
+      "list": [
+        {
+          "name": "权益投诉",
+          "pathName": "pages/school/board/index",
+          "query": "",
+          "scene": null
+        }
+      ]
     }
   }
 }
