--- a/app.json
+++ b/app.json
@@ -36,6 +36,7 @@
     "pages/school/xiaoai",
     "pages/school/board/index",
     "pages/school/board/edit",
+    "pages/school/board/faq",
     "pages/school/board/detail",
     "pages/school/lost/edit",
     "pages/school/lost/index",
