--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.2.5",
-    "description": "新增学费缴费查询功能&更新增加39~42斋地点地图",
+    "version": "3.2.6",
+    "description": "权益投诉第三次改造升级(标签+FAQ)",
     "author": "Airmole"
   }
