更新学校地图

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.2.6",
-    "description": "权益投诉第三次改造升级(标签+FAQ)",
+    "version": "3.2.7",
+    "description": "更新地图",
     "author": "Airmole"
   }
