电费查询新增39~42斋

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.2.7",
-    "description": "更新地图",
+    "version": "3.2.8",
+    "description": "电费查询新增39~42斋",
     "author": "Airmole"
   }
