--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.2.8",
-    "description": "电费查询新增39~42斋",
+    "version": "3.2.9",
+    "description": "电费查询宿舍新建4层以上宿舍",
     "author": "Airmole"
   }
