优化相关文案提示

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.2.9",
-    "description": "电费查询宿舍新建4层以上宿舍",
+    "version": "3.2.10",
+    "description": "优化相关文案提示",
     "author": "Airmole"
   }
