--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.2.11",
-    "description": "更新校历&新增档案室电话&未评教增加modal提示",
+    "version": "3.2.12",
+    "description": "修复校园导航定位坐标问题",
     "author": "Airmole"
   }
