--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.2.12",
-    "description": "修复校园导航定位坐标问题",
+    "version": "3.2.13",
+    "description": "OCR插件升级&四六级跳转国务院小程序",
     "author": "Airmole"
   }
