登录相关优化&头像昵称授权&多余页面删除&通讯录接口获取更新

--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "pages/index/index",
     "pages/index/login",
     "pages/index/feature",
+    "pages/index/setting",
     "pages/books/search",
     "pages/books/index",
     "pages/books/detail",
@@ -12,7 +13,6 @@
     "pages/books/overdue/index",
     "pages/books/recommend/index",
     "pages/books/my",
-    "pages/books/portrait",
     "pages/course/my",
     "pages/course/search",
     "pages/course/content",
