--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,19 +1,8 @@
 {
   "setting": {
-    "urlCheck": true
+    "urlCheck": false
   },
-  "condition": {
-    "miniprogram": {
-      "list": [
-        {
-          "name": "pages/school/board/index",
-          "pathName": "pages/school/board/index",
-          "query": "",
-          "scene": null
-        }
-      ]
-    }
-  },
+  "condition": {},
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-  "libVersion": "2.25.3"
+  "libVersion": "2.26.0"
 }
