--- a/app.json
+++ b/app.json
@@ -41,7 +41,9 @@
     "pages/school/lost/detail",
     "pages/school/run/index",
     "pages/school/finance/bind",
-    "pages/school/finance/index"
+    "pages/school/finance/index",
+    "pages/school/card/index",
+    "pages/school/card/bind"
   ],
   "window": {
     "backgroundTextStyle": "light",
