--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.3.6",
-    "description": "取消使用七牛云，太贵了用不起&修复成绩单分享绘图",
+    "version": "3.3.7",
+    "description": "权益投诉功能相关优化",
     "author": "Airmole"
   }
