--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.3.7",
-    "description": "权益投诉功能相关优化",
+    "version": "3.3.8",
+    "description": "部分页面分页功能优化&网费查询功能年份选择器优化",
     "author": "Airmole"
   }
