--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.3.8",
-    "description": "部分页面分页功能优化&网费查询功能年份选择器优化",
+    "version": "3.3.9",
+    "description": "预留领取红包封面接口",
     "author": "Airmole"
   }
