--- a/project.private.config.json
+++ b/project.private.config.json
@@ -2,7 +2,19 @@
   "setting": {
     "urlCheck": false
   },
-  "condition": {},
+  "condition": {
+    "miniprogram": {
+      "list": [
+        {
+          "name": "redpacket",
+          "pathName": "pages/webview/redpacket",
+          "query": "url=https%3A%2F%2Fsupport.weixin.qq.com%2Fcgi-bin%2Fmmsupport-bin%2Fshowredpacket%3Freceiveuri%3DbZA4ovMnfkJ",
+          "launchMode": "default",
+          "scene": null
+        }
+      ]
+    }
+  },
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
   "libVersion": "2.26.0"
 }
