新增图书馆音像室放映日程功能

--- a/app.json
+++ b/app.json
@@ -45,7 +45,8 @@
     "pages/school/card/index",
     "pages/school/card/bind",
     "pages/webview/webview",
-    "pages/webview/redpacket"
+    "pages/webview/redpacket",
+    "pages/school/movie"
   ],
   "window": {
     "backgroundTextStyle": "light",
