社科音像室放映日历优化修复

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.3.9",
-    "description": "预留领取红包封面接口",
+    "version": "3.4.0",
+    "description": "社科馆音像室放映安排日历",
     "author": "Airmole"
   }
