首页广告到期移除

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.4.2",
-    "description": "电费查询追加17斋绑定选项",
+    "version": "3.4.3",
+    "description": "移除首页广告",
     "author": "Airmole"
   }
