--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.4.3",
-    "description": "移除首页广告",
+    "version": "3.4.4",
+    "description": "电费查询绑定功能接入支持1,2,37斋宿舍楼",
     "author": "Airmole"
   }
