--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.4.5",
-    "description": "用户隐私保护指引授权提示&我的借阅功能系统不可用提示优化",
+    "version": "3.4.6",
+    "description": "更新校历&更新考证资料",
     "author": "Airmole"
   }
