更新社科馆音像室放映地点

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shellbox",
-    "version": "3.4.6",
-    "description": "更新校历&更新考证资料",
+    "version": "3.4.7",
+    "description": "更新社科馆音像室放映地点",
     "author": "Airmole"
   }
